# ascript

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  goal-brief.md  goal-perf.md
.github/workflows/: ci.yml  editors.yml  fuzz-nightly.yml  mirror-grammar.yml  release-rt.yml
ascript-wasm/: Cargo.toml
ascript-wasm/.cargo/: config.toml
ascript-wasm/src/: lib.rs
ascript-wasm/tests/: node_smoke.rs
bench/: CALL_RESULTS.md  CNTR_RESULTS.md  COMPACT_VALUE_RESULTS.md  DATA_PARALLEL_RESULTS.md  DECODE_PAIR_CENSUS.md  DECODE_RESULTS.md  DEFER_RESULTS.md  ELIDE_RESULTS.md  EMBED_RESULTS.md  EXEC_GATE.md  EXEC_RESULTS.md  LANE_RESULTS.md  NANB_RESULTS.md  PROFILING_RESULTS.md  REGION_PROBE.md  REGION_RESULTS.md  REPLAY_RESULTS.md  RESILIENCE_RESULTS.md  RT_SIZE_RESULTS.md  SHAPE_RESULTS.md  SHARED_HEAP_RESULTS.md  WARM_RESULTS.md  WORKERS_RESULTS.md  ab.sh  compact_value_bench.as  data_parallel_bench.as  defer_bench.as  defer_free_bench.as  exec_ab.sh  gen_module_tree.py  native_startup_bench.sh  rt_size_matrix.sh  run_call_bench.sh  run_compact_value_bench.sh  run_data_parallel_bench.sh  run_elide_bench.sh  run_nanb_bench.sh  run_region_bench.sh  run_replay_bench.sh  run_shared_heap_bench.sh  (+6 more)
bench/profiling/: analyze.py  async_concurrent.as  async_inline.as  call_heavy.as  call_heavy_typed.as  func_pipeline.as  json_roundtrip.as  object_churn.as  parse_sample.py  race_compute.as  (+6 more)
capi/: Cargo.toml  build.rs
capi/include/: ascript.h
capi/src/: lib.rs
capi/tests/: c_host_example.rs  c_smoke.rs  header_drift.rs  smoke.c
docker/: Dockerfile
docs/: index.html  playground.html  reader.html
editors/: README.md  VALIDATION.md
editors/zed/: Cargo.toml  README.md  extension.toml
editors/zed/languages/ascript/: config.toml  outline.scm
editors/zed/src/: ascript.rs
examples/: all_features.as  archive_roundtrip.as  async.as  binary_serialization.as  blob_basics.as  bundle_multimodule.as  bundle_util.as  caps_sandbox.as  cli_toolkit.as  concurrency.as  concurrency_toolkit.as  core_types.as  cron_next.as  data.as  data_parallel.as  datetime.as  deep_recursion.as  default_params.as  defer.as  diff_unified.as  docker_info.as  email_builder.as  enums_adt.as  enums_negative_backing.as  events_emitter.as  factorial.as  ffi_libm.as  force_unwrap.as  frozen.as  functional_pipelines.as  functions.as  generators.as  generators_test.as  generics.as  host_info.as  instanceof.as  integers.as  interfaces.as  jwt_basics.as  logging.as  (+49 more)
fuzz/: .gitignore  Cargo.toml  regenerate_aso_corpus.sh
fuzz/corpus/archive_roundtrip/: bad_bomb_chunk_len  bad_bomb_key_len  bad_bomb_module_count  bad_entry_out_of_range  bad_invalid_utf8_key  bad_short_magic  bad_truncated_after_version  bad_version_future  bad_wrong_magic  ex_multimodule
fuzz/corpus/aso_roundtrip/: bad_bomb_const_len  bad_bomb_proto_len  bad_magic  bad_trailing_only_header_plus_byte  bad_truncated_after_header  bad_truncated_debug  bad_version_future  bad_version_stale  ex_advanced_ai_chat.aso  ex_advanced_ai_tools.aso  ex_advanced_bit_codec.aso  ex_advanced_bundle_caps_util.aso  ex_advanced_callback_escalation.aso  ex_advanced_crypto_and_compress.aso  ex_advanced_data_pipeline.aso  ex_advanced_datetime_intl.aso  ex_advanced_decode_hot_loop.aso  ex_advanced_defer_resources.aso  ex_advanced_documented_library.aso  ex_advanced_ffi_struct.aso  ex_advanced_fs_toolkit.aso  ex_advanced_generic_result.aso  ex_advanced_http_client.aso  ex_advanced_http_header_safety.aso  ex_advanced_http_server.aso  ex_advanced_interface_dispatch.aso  ex_advanced_json_adt.aso  ex_advanced_object_order_pipeline.aso  ex_advanced_postgres_crud.aso  ex_advanced_process_streams.aso  ex_advanced_redis_cache.aso  ex_advanced_server_multicore.aso  ex_advanced_shared_routing_table.aso  ex_advanced_sqlite_crud.aso  ex_advanced_sse_client.aso  ex_advanced_state_machine.aso  ex_advanced_stream_pipeline.aso  ex_advanced_string_repeat_guard.aso  ex_advanced_telemetry.aso  ex_advanced_tui_dashboard.aso  (+93 more)
fuzz/corpus/differential/: ex_defer_in_branch  ex_seed_0  ex_seed_1  ex_seed_2  ex_seed_3  ex_seed_4  ex_seed_5  ex_seed_6  ex_seed_7
fuzz/corpus/parser/: bad_deep_parens  bad_fn_partial  bad_let_noinit  bad_match_partial  bad_unicode_garbage  bad_unterminated_str  bad_valid_hello  ex_gen_0  ex_gen_1  ex_gen_2  ex_gen_3
fuzz/corpus/pgo_section/: bad_invalid_kind  ex_pgo_section
fuzz/corpus/trace_roundtrip/: bad_bomb_record_len  bad_header_crc  bad_magic  bad_trailing_bytes  bad_truncated_after_magic  bad_unknown_record_kind  bad_version_future  bad_wrong_event_count  ex_run.astrc  ex_test.astrc
fuzz/corpus/worker_serialize/: bad_bomb_array_len  bad_bomb_bytes_len  bad_dangling_ref  bad_truncated_array  bad_unknown_tag_padded  ex_map  ex_nested_object  ex_scalars  ex_self_cycle
fuzz/fuzz_targets/: archive_roundtrip.rs  aso_roundtrip.rs  differential.rs  parser.rs  pgo_section.rs  trace_roundtrip.rs  worker_serialize.rs
scripts/: build-rt.sh  build-wasm.sh  nanb-cross-repr-diff.sh  release-rt-stubs.sh  sync-grammar.sh  wasm_smoke.mjs
src/: ast.rs  bundle.rs  cli_surface.rs  coro.rs  det.rs  diagnostics.rs  elide_mark.rs  env.rs  error.rs  fmt.rs  gc.rs  interp.rs  lex_literals.rs  lexer.rs  lib.rs  lint_config_toml.rs  main.rs  parser.rs  platform.rs  repl.rs  span.rs  task.rs  test_filter.rs  token.rs  trace.rs  value.rs  watch.rs
superpowers/: agent-handoff.md  roadmap.md
tests/: ai.rs  ai_mock.rs  alloc_count.rs  archive.rs  archive_std.rs  aso.rs  batt_negative_space.rs  blob.rs  call_fast.rs  cap_audit.rs  check.rs  cli.rs  cntr_negative_space.rs  compile_cache.rs  cron.rs  cst_format.rs  cst_lossless.rs  cst_parser_oracle.rs  cst_resolve.rs  dap.rs  decode_census.rs  determinism.rs  docker.rs  docker_review_probes.rs  docs_drift.rs  elide.rs  embed.rs  embed_negative_space.rs  exec_battery.rs  frontend_conformance.rs  lsp.rs  lsp_phase2.rs  m17_generator_regressions.rs  m17_structured_concurrency.rs  markdown.rs  modules.rs  native.rs  par_negative_space.rs  pgo.rs  pkg.rs  (+36 more)
tree-sitter-ascript/: grammar.js
(+794 files in other folders)
