[package]
name = "ascript"
version = "0.1.0"
edition = "2021"
description = "A small, dynamically-typed, JavaScript-flavored scripting language with runtime-checked type contracts and a batteries-included standard library."
repository = "https://github.com/ascript-lang/ascript"
license = "MIT"
readme = "README.md"

[lib]
name = "ascript"
path = "src/lib.rs"

[[bin]]
name = "ascript"
path = "src/main.rs"

[dependencies]
rust_decimal = { version = "1", features = ["maths"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
async-recursion = "1"
# Probe-and-grow native stack (SP9 §1): `stacker::maybe_grow` allocates a fresh
# heap-backed stack segment at the native re-entry points (VM/generator/compiler/
# tree-walker) when the remaining native stack falls below the red zone, so deep
# recursion reaches the `MAX_CALL_DEPTH` logical cap cleanly instead of SIGABRTing
# the native stack first. CORE/unconditional (must build under
# --no-default-features); the only `unsafe` is the crate's own (sanctioned).
stacker = "0.1"
indexmap = "2"
# Cyclic GC (Bacon–Rajan trial-deletion over refcounted `Cc<T>`). CORE runtime,
# NOT feature-gated: the GC must be present in --no-default-features too. V13-T1
# adds the dep + `Trace` impls only; the actual Rc→Cc migration of cycle-capable
# Value variants is V13-T2. Native resources STAY on Rc (deterministic Drop).
gcmodule = "0.3"
cstree = { version = "0.14", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
ariadne = "0.6"
rustyline = "14"
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.150", features = ["preserve_order"], optional = true }
regex = { version = "1.12.3", optional = true }
base64 = { version = "0.22", optional = true }
hex = { version = "0.4", optional = true }
csv = { version = "1", optional = true }
# NOT feature-gated: the CLI's `ascript.toml [lint]` parser (in `src/lint_config_toml.rs`) needs
# `toml` unconditionally so `--no-default-features` still builds the config layer.
# `src/check/` stays toml-free and feature-independent.
toml = "0.8"
serde_yaml = { version = "0.9", optional = true }
percent-encoding = { version = "2", optional = true }
url = { version = "2", optional = true }
uuid = { version = "1", features = ["v4", "v7"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"], optional = true }
icu = { version = "1", features = ["compiled_data"], optional = true }
fixed_decimal = { version = "0.5", optional = true }
dotenvy = { version = "0.15", optional = true }
walkdir = { version = "2", optional = true }
ignore = { version = "0.4", optional = true }
sha2 = { version = "0.10", optional = true }
md-5 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
argon2 = { version = "0.5", optional = true }
bcrypt = { version = "0.15", optional = true }
rand = { version = "0.8", optional = true }
crc32fast = { version = "1", optional = true }
xxhash-rust = { version = "0.8", features = ["xxh64"], optional = true }
flate2 = { version = "1", optional = true }
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }
zstd = { version = "0.13", optional = true }
brotli = { version = "7", optional = true }
tar = { version = "0.4", optional = true }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "multipart", "cookies", "gzip", "brotli", "deflate", "zstd", "socks", "http2"], optional = true }
hyper = { version = "1", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }
futures-util = { version = "0.3", optional = true }
http = { version = "1", optional = true }
tokio-util = { version = "0.7", features = ["io"], optional = true }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"], optional = true }
crossterm = { version = "0.28", optional = true }
hostname = { version = "0.4", optional = true }
tower-lsp = { version = "0.20", optional = true }
sysinfo = { version = "0.31", optional = true }
rmpv = { version = "1", optional = true }
ciborium = { version = "0.2", optional = true }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"], optional = true }
redis = { version = "0.27", default-features = false, features = ["tokio-comp"], optional = true }
# SP11 std/ai: multi-provider LLM client. Wraps the genai crate (OpenAI +
# OpenAI-compat swarm + native Anthropic/Gemini + Bedrock SigV4 + Vertex). Optional,
# off-by-default `ai` feature (network + heavy provider deps → opt-in like telemetry).
genai = { version = "0.6", optional = true, features = ["bedrock-sigv4"] }

[build-dependencies]
cc = "1"
ungrammar = "1"

[dev-dependencies]
tree-sitter = "0.25"
tempfile = "3"

[features]
default = ["data", "datetime", "intl", "sys", "crypto", "compress", "sql", "net", "tui", "lsp", "log", "sysinfo", "binary", "postgres", "redis", "workflow", "pkg"]
# SP6 package manager / dependency story. Decentralized-first (git/url/path deps;
# bare-version requirements need a future registry). CLI-only and feature-gated,
# exactly like `src/lint_config_toml.rs` keeps TOML/IO out of the interpreter
# core: ALL of `src/pkg/` is `#[cfg(feature = "pkg")]`. The ONLY non-`pkg` change
# is the dependency-free package-resolver map + the shared `classify_specifier`
# helper in the core (so a bare `import "x"` resolves on both engines). Needs
# `net` (reqwest for url-tarball fetch), `compress` (flate2/zip/tar extract), and
# `sha2` (the `asum1` content hash); `toml` is already non-optional; `git` is the
# system binary (no crate linked). Under `--no-default-features` `pkg` is off → no
# network/git surface, the resolver map stays empty, and a bare specifier yields a
# clean "unknown package" error. Default-on (batteries; the CLI ships it).
pkg = ["net", "compress", "dep:sha2", "dep:base64"]
data = ["dep:serde", "dep:serde_json", "dep:regex", "dep:base64", "dep:hex", "dep:uuid", "dep:csv", "dep:serde_yaml", "dep:percent-encoding", "dep:url"]
# SP5 §4: std/msgpack + std/cbor binary serialization via the rmpv / ciborium
# dynamic-value models (no serde derive — bridged by hand like json). Typed decode
# reuses validate_into/parse_value, so it depends on `data`. Default-on.
binary = ["dep:rmpv", "dep:ciborium", "data"]
# std/log: leveled structured logging. Reuses json's total `to_json_lossy`
# serializer (behind `data`), so it pulls in `data`. Default-on; cfg's out
# cleanly under --no-default-features.
log = ["data"]
# SP9 §2: std/workflow — durable execution via event-sourced replay. The event
# log persists `Value`s through json's total `to_json_lossy` serializer (behind
# `data`), so it pulls in `data`. Default-on; cfg's out cleanly under
# --no-default-features (where `import "std/workflow"` is an unknown-module error).
workflow = ["data"]
datetime = ["dep:chrono"]
intl = ["dep:icu", "dep:fixed_decimal", "dep:chrono"]
# Task 2 wires `dotenvy` for std/env; Task 3 (fs) adds walkdir/ignore/regex; Task 7
# (process, std/process) adds tokio's process + io-util plumbing for subprocesses.
sys = ["dep:dotenvy", "dep:walkdir", "dep:ignore", "dep:regex", "dep:hostname", "tokio/process", "tokio/io-util", "tokio/io-std"]
crypto = ["dep:sha2", "dep:md-5", "dep:hmac", "dep:argon2", "dep:bcrypt", "dep:rand", "dep:hex", "dep:crc32fast", "dep:xxhash-rust"]
compress = ["dep:flate2", "dep:zip", "dep:zstd", "dep:brotli", "dep:tar"]
sql = ["dep:rusqlite"]
# SP5 §6: async network DB clients over the !Send current-thread runtime. The
# driver futures are spawned via spawn_local; connections are native resources with
# deterministic Drop (abort the driver task on close). Default-on (batteries).
postgres = ["dep:tokio-postgres", "tokio/net"]
redis = ["dep:redis", "tokio/net"]
# M14 networking. Task 1 (std/net/tcp) needs only tokio's net + io-util; later
# tasks (http/ws) ADD dep:reqwest/dep:hyper/etc. to this feature.
net = ["dep:reqwest", "dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:futures-util", "dep:http", "dep:tokio-util", "dep:tokio-tungstenite", "dep:base64", "tokio/net", "tokio/io-util"]
# §11.5 deferral: HTTP/3 (default-OFF, opt-in). Enables reqwest's http3 backend so
# `httpVersion:"3"` pins http3; without it that path returns a clean Tier-1 error.
# reqwest's http3 is UNSTABLE: building with this feature ALSO requires
# `RUSTFLAGS="--cfg reqwest_unstable"`. Kept out of `default` for that reason.
http3 = ["net", "reqwest/http3"]
# M15 std/tui: terminal control + styling + events via crossterm, plus a hand-rolled
# double-buffered screen. Default-on; cfg's out cleanly under --no-default-features.
tui = ["dep:crossterm"]
# M16 language server. Static-analysis-only (lex/parse → diagnostics/symbols/
# completion/hover/goto-def); never runs the interpreter, so it avoids the !Send
# Rc/RefCell runtime. tower-lsp bundles lsp-types + tower + JSON-RPC over stdio.
lsp = ["dep:tower-lsp", "tokio/io-std"]
sysinfo = ["dep:sysinfo"]
# SP12 std/telemetry: vendor-neutral observability facade (tracing spans, metrics,
# analytics events) with three HAND-ROLLED HTTP exporters (OTLP http/json, Sentry
# envelopes, PostHog capture) over the pooled reqwest client in net_http.rs — NO
# opentelemetry/sentry/posthog crate (they assume a Send multi-thread runtime; the
# interp is !Send current-thread). Depends on `data` (json::to_json_lossy total
# serializer) + `net` (the shared reqwest client). NOT in `default` (network + new
# surface → opt-in, like http3). cfg's out cleanly under --no-default-features; the
# SP11-facing Interp::telemetry_* soft hook keeps always-present signatures so
# std/ai builds with telemetry absent.
telemetry = ["data", "net"]
# SP11 std/ai: multi-provider LLM client wrapping the genai crate. Depends on
# `data` (json serialization for raw escape-hatch + structured output) and `net`
# (the pooled reqwest client we inject into genai). NOT in `default` (network +
# heavy provider deps → opt-in, like telemetry/http3). cfg's out cleanly under
# --no-default-features; the std/ai import is still accepted by the checker via
# the un-gated STD_MODULES list. Emits OTel GenAI spans through SP12's soft hook
# with NO Cargo dependency on telemetry (works whether telemetry is on or off).
ai = ["data", "net", "dep:genai"]

[lints.clippy]
await_holding_refcell_ref = "deny"
